--- a/src/nav.scss
+++ b/src/nav.scss
@@ -21,15 +21,15 @@ nav {
 				text-decoration: none;
 
 				/*below I changed the color*/
-				color: rgba(255, 255, 255, 1);
+				//color: rgba(255, 255, 255, 1);
 				/*I added some padding*/
 				// padding:0 2vw;
 				/*also changed the font family but that's totally irrelevant*/
 				letter-spacing: 1.34px;
 
 				&:hover {
-					background-color: #ad0c2f;
-
+					//background-color: #ad0c2f;
+					font-weight: bolder;
 
 					// text-decoration: underline;
 				}
