--- a/src/App.scss
+++ b/src/App.scss
@@ -119,7 +119,7 @@ html {
 	margin: 0;
 }
 
-.App {
+.App-background {
 	height: 100vh;
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -221,7 +221,7 @@ html {
 }
 
 @media (min-width: 650px) {
-	.App {
+	.App-background {
 		background-position: center center;
 	}
 
