--- a/src/App.scss
+++ b/src/App.scss
@@ -121,10 +121,11 @@ html {
 
 .App-background {
 	height: 100vh;
-	background-size: cover;
 	background-repeat: no-repeat;
-
-	background-position: top center;
+    background-size: 100% 100%;
+    height: 100vh;
+    margin: 3px auto 0;
+    position: relative;
 }
 
 .App-content {
