--- a/src/nav.scss
+++ b/src/nav.scss
@@ -33,6 +33,12 @@ nav {
 
 					// text-decoration: underline;
 				}
+				&:active {
+					//background-color: #ad0c2f;
+					font-weight: bolder;
+
+					// text-decoration: underline;
+				}
 			}
 		}
 	}
