--- a/src/assets/scss/paper-kit/_sections.scss
+++ b/src/assets/scss/paper-kit/_sections.scss
@@ -20,6 +20,10 @@
     background-color: #F9E1E1;
     color: $white-color;
 }
+.section-x{
+    background-color: floralwhite;
+    color: $white-color;
+}
 .section-brown{
     background-color: #A59E94;
     color: $white-color;
