--- a/src/assets/scss/paper-kit/_responsive.scss
+++ b/src/assets/scss/paper-kit/_responsive.scss
@@ -4,6 +4,13 @@
     #cd-vertical-nav {
         display: none !important;
     }
+    .image-chat-popup-bg {
+        // min-height: 1200px;
+        margin-top: 30%;
+        background-repeat: no-repeat;
+        margin-bottom: 1%;
+        position: inherit;
+    }
     .footer-img{
         
         background-size: contain ;
