--- a/src/assets/scss/bot.scss
+++ b/src/assets/scss/bot.scss
@@ -119,11 +119,11 @@
 // 	  opacity: 0;
 // 	}
 //   }
-//   .bot-avatar{
-// 	width: 29px;
-// 	height: 41px;
-// 	opacity: 1;
-//   }
+  .bot-avatar{
+	width: 29px;
+	height: 41px;
+	opacity: 1;
+  }
 //   .react-chatbot-kit-chat-btn-send{
 // 	background: var(--unnamed-color-d53934) 0% 0% no-repeat padding-box;
 // 	background: #D53934 0% 0% no-repeat padding-box !important;
