--- a/src/assets/scss/bot.scss
+++ b/src/assets/scss/bot.scss
@@ -124,6 +124,10 @@
 	height: 41px;
 	opacity: 1;
   }
+  .rsc-os-options{
+	margin-top: 18% !important;
+    padding: revert !important;
+  }
 //   .react-chatbot-kit-chat-btn-send{
 // 	background: var(--unnamed-color-d53934) 0% 0% no-repeat padding-box;
 // 	background: #D53934 0% 0% no-repeat padding-box !important;
