--- a/src/assets/scss/react/paper-kit/_responsive.scss
+++ b/src/assets/scss/react/paper-kit/_responsive.scss
@@ -109,7 +109,9 @@ html {
 	border-radius: 25px !important;
 	opacity: 1;
 }
-
+.rsc-os-options{
+	margin-top: 10% !important;
+  }
 .open-semsm-box-btn-txt {
 	text-align: center !important;
 	font: normal normal medium 16px/25px Poppins !important;
