fix desing minor issue

--- a/src/assets/scss/bot.scss
+++ b/src/assets/scss/bot.scss
@@ -128,6 +128,9 @@
 	margin-top: 18% !important;
     padding: revert !important;
   }
+  .message-output{
+	  margin-top: 10% ;
+  }
 //   .react-chatbot-kit-chat-btn-send{
 // 	background: var(--unnamed-color-d53934) 0% 0% no-repeat padding-box;
 // 	background: #D53934 0% 0% no-repeat padding-box !important;
