--- a/src/assets/scss/paper-kit/_buttons.scss
+++ b/src/assets/scss/paper-kit/_buttons.scss
@@ -203,7 +203,22 @@
     box-shadow: none !important;
     text-decoration: none;
 }
+.round-btn{
+   // left: 990px;
+    width: 100%;
+    height: 59px;
+    margin-left: 50%;
+    background: var(--unnamed-color-d53934) 0% 0% no-repeat padding-box;
+    background: #D53934 0% 0% no-repeat padding-box;
+    box-shadow: 0px 3px 6px #36001833;
+    border-radius: 25px;
+    opacity: 1;
 
+}
+.round-btn:hover{
+   background: #660704;
+
+}
 .column .btn-link{
     padding: 7px 0;
 }
