add arabc support

--- a/src/assets/scss/paper-kit/_examples.scss
+++ b/src/assets/scss/paper-kit/_examples.scss
@@ -31,10 +31,14 @@ box-shadow: 0px 10px 20px #36001833;
 border-radius: 25px;
 opacity: 1;
 }
+.card-service{
+    height: 100%;
+
+}
 .offer-card{
     // width: 370px;
     padding: 25px;
-height: 60%;
+height: 75%;
 margin-left:auto ;
 background: #FFFFFF 0% 0% no-repeat padding-box;
 box-shadow: 0px 10px 20px #36001833;
