--- a/src/assets/scss/paper-kit/_responsive.scss
+++ b/src/assets/scss/paper-kit/_responsive.scss
@@ -51,6 +51,22 @@
        
      
      }
+     .rd3t-tree-container {
+        width: 100%;
+        height: 100%;
+      }
+      
+      .rd3t-grabbable {
+        cursor: move; /* fallback if grab cursor is unsupported */
+        cursor: grab;
+        cursor: -moz-grab;
+        cursor: -webkit-grab;
+      }
+      .rd3t-grabbable:active {
+          cursor: grabbing;
+          cursor: -moz-grabbing;
+          cursor: -webkit-grabbing;
+      }
      .round-btn:hover{
         background: #660704;
      
